fixed backtest issues, added summary to backtest
