# src/controllers/strategy_revision_controller.js
@@ -4,11 +4,13 @@ import BacktestService from '../services/backtest_service';
 
 export async function postRevision(req, res) {
   try {
-    const revision = req.swagger.params.body.value;
+    const revision = req.swagger.params.revision.value;
     const strategyId = req.swagger.params.strategyId.value;
-    if (revision.strategy !== strategyId) return res.status(400).send({ message: 'strategyId mismatch' });
+    if (revision.strategy !== strategyId) {
+      return res.status(400).send({ message: 'strategyId mismatch' });
+    }
 
-    const service = new StrategyRevisionService(...revision);
+    const service = new StrategyRevisionService(revision);
     const data = await service.create();
     return res.status(200).send(data);
   } catch (err) {
@@ -33,12 +35,25 @@ export async function putRevision(req, res) {
   }
 }
 
+export async function getRevision(req, res) {
+  try {
+    const strategyId = req.swagger.params.strategyId.value;
+    const revisionId = req.swagger.params.revisionId.value;
+
+    const service = new StrategyRevisionService({ strategy: strategyId, id: revisionId });
+    const data = await service.getById(revisionId);
+    return res.status(200).send(data);
+  } catch (err) {
+    return res.status(400).send({ message: err.message });
+  }
+}
+
 export async function backtest(req, res) {
   try {
-    const revisionId = req.swagger.params.strategyRevisionId.value;
-    const service = new BacktestService(revisionId);
-    const numberOfEvents = await service.backtest();
-    return res.status(200).send({ message: `${numberOfEvents} events are being processed to backtest the strategy` });
+    const revisionId = req.swagger.params.revisionId.value;
+    const service = new BacktestService({ revisionId });
+    const summary = await service.backtest();
+    return res.status(200).send(summary);
   } catch (err) {
     return res.status(400).send({ message: err.message });
   }
